syntax = "proto3";
package agrichain;

message ACPayload {
    enum Action {
        CREATE_SYSADMIN = 0;
        UPDATE_SYSADMIN = 1;
    }

    Action action = 1;

    // Approximately when transaction was submitted, as a Unix UTC timestamp
    uint64 timestamp = 2;

    UpdateSystemAdminAction updateSysAdmin = 3;
}

message UpdateSystemAdminAction {
    string publicKey = 1;
}
